# investment-tech-tree

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.cursor/rules/: 1_overview.mdc  2_data.mdc  3_react.mdc  4_styling.mdc  5_typescript.mdc
.github/ISSUE_TEMPLATE/: bug-report.md  publication-draft.md  research.md
.github/workflows/: deploy.yml  mcs.yml  mcs_runner.yml
backups/: tech-tree-2025-02-20_06-58-24.dump
data/: fossil_fuel_tt_v2.json  fossil_fuel_tt_v3.json  hydro_tech_tree.json  missing_tech_tree_nodes.xlsx  nuclear_tt.json  nuclear_tt_v2.json  solar_tech_tree.json  tt-companies.csv  wind_tech_tree.json
data/claude/: fossil_fuel_v3.json
outputs/fossil_fuel_tt_v2/: metadata.json  risk_assessment_option1.json  risk_assessment_option2.json  risk_assessment_option3.json  sensitivity.json  simulation_runs_option1.json  simulation_runs_option2.json  simulation_runs_option3.json  stats_option1.json  stats_option2.json  stats_option3.json
outputs/nuclear_tt/: metadata.json  risk_assessment_option1.json  risk_assessment_option2.json  risk_assessment_option3.json  sensitivity.json  simulation_runs_option1.json  simulation_runs_option2.json  simulation_runs_option3.json  stats_option1.json  stats_option2.json  stats_option3.json
public/outputs/fossil_fuel_tt_v2/: deterministic_analysis.json  metadata.json  risk_assessment_option2.json  risk_assessment_option3.json  sensitivity.json  simulation_runs_option1.json  simulation_runs_option3.json  stats_option1.json  stats_option2.json  stats_option3.json
public/outputs/nuclear_tt/: distributions_option1.json  distributions_option2.json  distributions_option3.json  metadata.json  risk_assessment_option1.json  risk_assessment_option2.json  risk_assessment_option3.json  sensitivity.json  simulation_runs_option3.json  stats_option1.json  stats_option2.json  stats_option3.json
public/outputs/nuclear_tt_v2/: deterministic_analysis.json
scripts/: add-fossil-fuel-data.ts  add-nuclear-data.ts  add-nuclear-node-descriptions.ts  add-tt-companies.ts  run_scheduler_demo.py  run_simulation.py
simulations/: baseline_simulation.py  mcs_techtree_runner.py  process_simulation_data.py  save_baseline_simulation.py  simulation.py
src/: DATA.ts  DATA_extended.ts  nuclear_investment_scheduer.py
src/ARCHIVED/: TechTree_With_NEO4j.tsx
src/app/: GraphContext.tsx  actions.ts  globals.css  layout.tsx  page.tsx  xy-theme.css
src/app/actions/: edges.ts  nodes-edges.ts  nodes.ts  rag.ts  server.ts
src/components/: AiAssistantPanel.tsx  Chat.tsx  CompanyDetails.tsx  CompanyNode.tsx  CustomNode.tsx  EditInterface.tsx  EditTechTreePanel.tsx  ExportButton.tsx  GroupSelector.tsx  KnowledgeBaseSelector.tsx  Legend.tsx  LoadingSpinner.tsx  LoginModal.tsx  Manual.tsx  MobileWarning.tsx  MoreCompaniesNode.tsx  NodeActions.tsx  NodeDetails.tsx  NodeEditor.tsx  Simulations.tsx  SkillTree.tsx  TabPanel.tsx  TechTree.tsx  TechTreeContainer.tsx
src/components/agent/: AgentCards.tsx
src/data/: DATA.ts  edges.ts  nodes.ts  simulation_results.json
src/hooks/: useTechTree.ts
src/lib/: agent-system.ts  agent-tools.ts  agent-types.ts  dagrejs.ts  data.ts  elkjs.ts  geminiClient.ts  mongodb-schemas.ts  mongodb.ts  neo4j.ts  nodeDescriptions.ts  nuclearScheduler.ts  queries.ts  rag.ts  reactflow.ts  simulation.ts  toast.ts  topicConfig.ts  types.ts
src/libs/: neo4j.ts
src/techtree/: __init__.py  env.py  logger.py  scheduler.py
tests/: conftest.py  test_runner_end_to_end.py  test_scheduler_basic.py  test_scheduler_unit.py  test_simulator_basic.py
(+29 files in other folders)
